@@ -415,3 +415,10 @@ noinst_PROGRAMS += frysk3228/LoggerParent
 TESTS += frysk3231/ptrace-test
 frysk3231_ptrace_test_SOURCES = frysk3231/ptrace-test.c
 noinst_PROGRAMS += frysk3231/ptrace-test
+
+# Legacy ptrace inhibits some ptrace requests (PTRACE_DETACH, possibly
+# PTRACE_CONT, and maybe others) if the accompanying signal is invalid.
+# This test makes sure that behaviour hasn't been "fixed."
+TESTS += frysk3205/ptrace-test-3205
+frysk3205_ptrace_test_SOURCES = frysk3205/ptrace-test-3205.c
+noinst_PROGRAMS += frysk3205/ptrace-test-3205
