@@ -1,3 +1,9 @@
+2006-10-04  Chris Moller  <moller@mollerware.com>
+
+	* frysk3205/ptrace-test-3205.c: Added test to demonstrate that
+	PTRACE_DETACH with an invalid signal not only fails, but doesn't
+	do the detach either.
+
 2006-09-27  Andrew Cagney  <cagney@redhat.com>
 
 	* Makefile.am (TESTS): Add frysk3231/ptrace-test.
@@ -5,12 +11,12 @@
 
 2006-09-21  Chris Moller  <moller@mollerware.com>
 
-	* frysk2131/ptrace-test.c: Simplified test to demonstrate
+	* frysk3231/ptrace-test.c: Simplified test to demonstrate
 	PTRACE_DETACH failure under utrace-compatible ptrace.
 
 2006-09-20  Chris Moller  <moller@mollerware.com>
 
-	* frysk2131/ptrace-test.c: Added test to demonstrate PTRACE_DETACH
+	* frysk3231/ptrace-test.c: Added test to demonstrate PTRACE_DETACH
 	failure under utrace-compatible ptrace.
 
 2006-09-19    <swagiaal@redhat.com>
